create image carousel

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <!--main nav links --> 
                 <ul class="nav navbar-nav">
-                  <li class="active"><a>About</a></li>
-                  <li><a>New Properties</a></li>
+                  <li class="active"><a href="index.html">About</a></li>
+                  <li><a href="new-properties.html">New Properties</a></li>
                   <li><a>Listings</a></li>
                   <li><a>Market Report</a></li>
                   <li><a>Contact</a></li>
@@ -92,6 +92,7 @@
           </figure>
         </div>
 
+        <div class="row">
         <div class="col-sm-4">
           <h3>Company News</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, inventore, vero, rerum ullam nihil sapiente tempora molestias quis ducimus ipsum laborum vel. Tempore perspiciatis ea error dignissimos libero recusandae explicabo.</p>
@@ -135,11 +136,11 @@
  
         </div>
 
-        <div class="row">
-          <div class="col-sm-12">      
+        <div class="col-sm-12">      
             &copy; 2014 Exceptional Realty. All Rights Reserved.
           </div>
         </div>
+      </div> <!-- row --> 
 
      </div><!--container-->
 
